[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/misc/PauseController.gd" type="Script" id=1]
[ext_resource path="res://fonts/m5x7/SmallTextTheme.tres" type="Theme" id=2]
[ext_resource path="res://fonts/m5x7/TextTheme.tres" type="Theme" id=3]

[sub_resource type="StyleBoxFlat" id=1]
draw_center = false

[node name="PauseController" type="Node"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_right = 192.0
margin_bottom = 600.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_bottom = 0.139
margin_top = 456.0
margin_right = 192.0
margin_bottom = 516.6
alignment = 2

[node name="ResumeButton" type="Button" parent="Panel/VBoxContainer"]
margin_top = 28.0
margin_right = 192.0
margin_bottom = 54.0
theme = ExtResource( 2 )
custom_colors/font_color_focus = Color( 0, 0.603922, 0.839216, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/disabled = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
text = "Resume"

[node name="SettingsButton" type="Button" parent="Panel/VBoxContainer"]
margin_top = 58.0
margin_right = 192.0
margin_bottom = 84.0
theme = ExtResource( 2 )
custom_colors/font_color_focus = Color( 0, 0.603922, 0.839216, 1 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/disabled = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
text = "Settings"

[node name="MainMenuButton" type="Button" parent="Panel/VBoxContainer"]
margin_top = 88.0
margin_right = 192.0
margin_bottom = 114.0
theme = ExtResource( 2 )
custom_colors/font_color_focus = Color( 0, 0.603922, 0.839216, 1 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/disabled = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
text = "Main Menu"

[node name="QuitButton" type="Button" parent="Panel/VBoxContainer"]
margin_top = 118.0
margin_right = 192.0
margin_bottom = 144.0
theme = ExtResource( 2 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/disabled = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
text = "Quit"

[node name="LevelName" type="RichTextLabel" parent="Panel"]
margin_right = 192.0
margin_bottom = 40.0
theme = ExtResource( 3 )
text = "LevelName"

[node name="ActNumber" type="RichTextLabel" parent="Panel"]
margin_top = 40.0
margin_right = 128.0
margin_bottom = 72.0
theme = ExtResource( 2 )
text = "ActNumber"

[connection signal="pressed" from="Panel/VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
